tests/negative/bad16.sp
(* Declaration inside declaration *)

a : Int = b : Double = 1;

main : Int () {
	return 0;
}
